--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,8 +19,10 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^0.19.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "node": "^16.4.0",
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -31,7 +33,6 @@
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
-  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
