--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.6.0",
