--- a/my-app/package.json
+++ b/my-app/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "web-vitals": "^2.0.1"
