--- a/my-app/package.json
+++ b/my-app/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "node": "^16.4.0",
     "pg": "^8.2.1",
+    "pg-promise": "^10.10.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^7.10.0",
