--- a/my-app/package.json
+++ b/my-app/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "stripe": "^8.167.0",
     "web-vitals": "^2.0.1"
   },
   "devDependencies": {
