--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material/drawer": "^12.0.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.6.0",
