--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,9 +21,9 @@
     "@material/drawer": "^12.0.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "clsx": "^1.1.1",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^0.19.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node": "^16.4.0",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
