--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,8 +22,10 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "clsx": "^1.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node": "^16.4.0",
@@ -40,7 +42,6 @@
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
-  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
