--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node index.js build",
     "postinstall": "npm run client:build",
     "client:dev": "react-scripts start",
     "client:build": "react-scripts build",
@@ -16,32 +15,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material/drawer": "^12.0.0",
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
-    "clsx": "^1.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "node": "^16.4.0",
     "pg": "^8.2.1",
     "pg-promise": "^10.10.2",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.9.2",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^7.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "stripe": "^8.167.0",
-    "web-vitals": "^2.0.1"
+    "stripe": "^8.160.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
